2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..getParam),
	(Cortado..getBoolParam), (Cortado.), (Cortado..getDoubleParam),
	(Cortado..getIntParam), (Cortado..shutDown), (Cortado..init):
	Print parameter values and how they are parsed.
	Accept 1 as true for boolean parameters.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink.RingBuffer),
	(AudioSink.RingBuffer.setAutoStart):
	Fix potential deadly embrace.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.doSendEvent):
	Wait for preroll befre setting the state to PLAYING after a seek.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Backport race fix in the sink where the state change function could have
	updated the state variables before the streaming thread did, resulting
	in an inconsistent state.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Sink.java: (Sink), (Sink.Pad), (Sink.query),
	(Sink.changeState):
	Make position reporting much more accurate.

2006-11-01  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Element.java: (Element.postMessage):
	cleanup

	* src/com/fluendo/jst/SystemClock.java: (SystemClock.waitFunc):
	When we are right on time, we return OK.

	* src/com/fluendo/player/Cortado.java: (Cortado..realRun),
	(Cortado..paint), (Cortado.), (Cortado..mousePressed),
	(Cortado..mouseReleased), (Cortado..start), (Cortado..stop):
	Try to limit the number of repaints.
	Cancel any pending mouse operations in the status bar when we release
	the mouse button outside of it.

	* src/com/fluendo/player/Status.java: (Status.paint),
	(Status.setHaveAudio), (Status), (Status.setHavePercent),
	(Status.setSeekable), (Status.intersectSeekbar),
	(Status.findComponent), (Status.mouseReleased),
	(Status.mouseDragged):
	Try to limit the number of repaints.
